correction de l'alignement des titres de la page accueil (responsive)

--- a/css/style.css
+++ b/css/style.css
@@ -130,9 +130,8 @@ h3 {
   display: flex;
   flex-direction: column;
 }
-
-.titre h1, h2, h3 {
-  font-size: 2rem;
+#pageTitre .titre h1, #pageTitre h2, #pageTitre h3 {
+  font-size: 1.5rem;
 }
 
 /* Début de la mise en forme du pdp.scss */
