--- a/scss/modules/_index.scss
+++ b/scss/modules/_index.scss
@@ -14,9 +14,8 @@
         display: flex;
         flex-direction: column;
     }
-}
 
-
-.titre h1, h2, h3{
-    font-size: police("xxl");
+    & .titre h1, h2, h3{
+        font-size: police("xl");
+    }
 }
